// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowMore component renders correctly 1`] = `
<div>
  <div />
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-4"
    >
      Show more
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly when trigger button is clicked 1`] = `
<div>
  <div>
    Show more content
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-37 MuiButton-contained buttonStyles-contained-39 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-40"
    >
      Trigger
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly with close button 1`] = `
<div>
  <div>
    Show more content
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-55 MuiButton-contained buttonStyles-contained-57 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-58"
    >
      Close
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly with close button is clicked 1`] = `
<div>
  <div />
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-73 MuiButton-contained buttonStyles-contained-75 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-76"
    >
      Trigger
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly with content expanded 1`] = `
<div>
  <div>
    Show more content
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-19 MuiButton-contained buttonStyles-contained-21 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-22"
    >
      Show more
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
